# zmk-protocol

./: Cargo.toml  flake.nix  release.toml
.github/workflows/: ci.yml  generate.yml  release.yml
zmk-protocol-rs/: Cargo.toml  README.md
zmk-protocol-rs/src/: lib.rs
zmk-protocol-rs/src/proto/: mod.rs  zmk.behaviors.rs  zmk.core.rs  zmk.keymap.rs  zmk.meta.rs  zmk.rs  zmk.studio.rs
