[workspace.package]
name = "zmk-protocol"
version = "0.0.2-alpha.3"
edition = "2021"
description = "A protocol to interact with ZMK firmware"
readme = "zmk-protocol-rs/README.md"
exclude = ["proto", "zephyr", "flake.*"]
homepage = "https://zmk.dev"
repository = "https://github.com/SergioRibera/zmk-protocol"
keywords = ["protocol", "keyboard", "wireless", "hid"]
categories = ["development-tools"]
license-file = "LICENSE"

[workspace]
members = ["zmk-protocol-rs"]
