[package]
name = "zmk-protocol"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
prost = "0.12.6"
tonic = { version = "0.11.0", default-features = false, features = [
    "prost",
    "transport",
] }
